--- a/charts/etcd/templates/tests/test-connection-headless.yaml
+++ b/charts/etcd/templates/tests/test-connection-headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "etcd.fullname" . }}-test-connection"
+  name: "{{ include "etcd.fullname" . }}-test-connection-headless"
   labels:
     {{- include "etcd.labels" . | nindent 4 }}
   annotations:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "etcd.fullname" . }}.{{ include "etcd.fullname" . }}:{{ .Values.service.metrics.port }}/livez']
+      args: ['{{ include "etcd.fullname" . }}-0.{{ include "etcd.fullname" . }}-headless:{{ .Values.service.metrics.port }}/livez']
   restartPolicy: Never
