fix: various pvc updates
volumeBindingMode does not exist

--- a/charts/zigbee2mqtt/values.yaml
+++ b/charts/zigbee2mqtt/values.yaml
@@ -100,8 +100,8 @@ persistence:
   ## Persistent Volume Storage Class Name
   storageClassName: ""
 
-  # Persistent Volume Binding Mode
-  volumeBindingMode: ""
+  # Persistent Volume Mode
+  volumeMode: ""
 
   # Persistent Volume Claim Selector
   # Useful if Persistent Volumes have been provisioned in advance
