--- a/charts/zigbee2mqtt/templates/pvc.yaml
+++ b/charts/zigbee2mqtt/templates/pvc.yaml
@@ -18,8 +18,8 @@ spec:
 {{- else }}
   storageClassName: ""
 {{- end }}
-{{- if .Values.persistence.volumeBindingMode }}
-  volumeBindingMode: "{{ .Values.persistence.volumeBindingMode }}"
+{{- if .Values.persistence.volumeMode }}
+  volumeMode: "{{ .Values.persistence.volumeMode }}"
 {{- end }}
   resources:
     requests:
