lldap: add refreshPolicy

--- a/charts/lldap/templates/external-secret.yaml
+++ b/charts/lldap/templates/external-secret.yaml
@@ -5,6 +5,7 @@ kind: ExternalSecret
 metadata:
   name: {{ include "lldap.fullname" . }}
 spec:
+  refreshPolicy: {{ .Values.externalSecrets.refreshPolicy }}
   refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
   secretStoreRef:
     name: {{ .Values.externalSecrets.secretStoreRef.name }}
