--- a/charts/lldap/templates/external-secret.yaml
+++ b/charts/lldap/templates/external-secret.yaml
@@ -14,6 +14,9 @@ spec:
     name: {{ include "lldap.fullname" . }}
     template:
       engineVersion: v2
+      data:
+        ldap_user_dn: "{{ tpl .Values.config.ldap_user_dn . }}"
+        ldap_user_pass: "{{ tpl .Values.config.ldap_user_dn . }}"
       templateFrom:
         - target: "Data"
           configMap:
