lldap: fixup eso value

--- a/charts/lldap/templates/external-secret.yaml
+++ b/charts/lldap/templates/external-secret.yaml
@@ -16,7 +16,7 @@ spec:
       engineVersion: v2
       data:
         ldap_user_dn: "{{ tpl .Values.config.ldap_user_dn . }}"
-        ldap_user_pass: "{{ tpl .Values.config.ldap_user_dn . }}"
+        ldap_user_pass: "{{ tpl .Values.config.ldap_user_pass . }}"
       templateFrom:
         - target: "Data"
           configMap:
