--- a/charts/lldap/templates/external-secret.yaml
+++ b/charts/lldap/templates/external-secret.yaml
@@ -1,5 +1,6 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
 {{- if .Values.externalSecrets.enabled }}
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
@@ -25,12 +26,156 @@ spec:
               - key: lldap_config.toml
     creationPolicy: "Owner"
     deletionPolicy: "Retain"
-  {{- with .Values.externalSecrets.data }}
+  {{- with .Values.externalSecrets.config.data }}
   data:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- with .Values.externalSecrets.dataFrom }}
+  {{- with .Values.externalSecrets.config.dataFrom }}
   dataFrom:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- if or .Values.externalSecrets.bootstrapUserSchemas.data .Values.externalSecrets.bootstrapUserSchemas.dataFrom }}
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "lldap.fullname" . }}-bootstrap-user-schemas
+spec:
+  refreshPolicy: {{ .Values.externalSecrets.refreshPolicy }}
+  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.externalSecrets.secretStoreRef.name }}
+    kind: {{ .Values.externalSecrets.secretStoreRef.kind }}
+  target:
+    name: {{ include "lldap.fullname" . }}-bootstrap-user-schemas
+    template:
+      engineVersion: v2
+      templateFrom:
+        - target: "Data"
+          configMap:
+            name: {{ include "lldap.fullname" . }}-bootstrap-user-schemas
+            items:
+              - key: user-schemas.json
+    creationPolicy: "Owner"
+    deletionPolicy: "Retain"
+  {{- with .Values.externalSecrets.bootstrapUserSchemas.data }}
+  data:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.externalSecrets.bootstrapUserSchemas.dataFrom }}
+  dataFrom:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
+{{- if .Values.users }}
+{{- if or .Values.externalSecrets.bootstrapUser.data .Values.externalSecrets.bootstrapUser.dataFrom }}
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "lldap.fullname" . }}-bootstrap-user
+spec:
+  refreshPolicy: {{ .Values.externalSecrets.refreshPolicy }}
+  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.externalSecrets.secretStoreRef.name }}
+    kind: {{ .Values.externalSecrets.secretStoreRef.kind }}
+  target:
+    name: {{ include "lldap.fullname" . }}-bootstrap-user
+    template:
+      engineVersion: v2
+      templateFrom:
+        - target: "Data"
+          configMap:
+            name: {{ include "lldap.fullname" . }}-bootstrap-user
+            items:
+            {{- range .Values.users }}
+              - key: {{ .id }}.json
+            {{- end }}
+    creationPolicy: "Owner"
+    deletionPolicy: "Retain"
+  {{- with .Values.externalSecrets.bootstrapUser.data }}
+  data:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.externalSecrets.bootstrapUser.dataFrom }}
+  dataFrom:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
+{{- end }}
+{{- if or .Values.externalSecrets.bootstrapGroupSchemas.data .Values.externalSecrets.bootstrapGroupSchemas.dataFrom }}
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "lldap.fullname" . }}-bootstrap-group-schemas
+spec:
+  refreshPolicy: {{ .Values.externalSecrets.refreshPolicy }}
+  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.externalSecrets.secretStoreRef.name }}
+    kind: {{ .Values.externalSecrets.secretStoreRef.kind }}
+  target:
+    name: {{ include "lldap.fullname" . }}-bootstrap-group-schemas
+    template:
+      engineVersion: v2
+      templateFrom:
+        - target: "Data"
+          configMap:
+            name: {{ include "lldap.fullname" . }}-bootstrap-group-schemas
+            items:
+              - key: group-schemas.json
+    creationPolicy: "Owner"
+    deletionPolicy: "Retain"
+  {{- with .Values.externalSecrets.bootstrapGroupSchemas.data }}
+  data:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.externalSecrets.bootstrapGroupSchemas.dataFrom }}
+  dataFrom:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
+{{- if .Values.groups }}
+{{- if or .Values.externalSecrets.bootstrapGroup.data .Values.externalSecrets.bootstrapGroup.dataFrom }}
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: {{ include "lldap.fullname" . }}-bootstrap-group
+spec:
+  refreshPolicy: {{ .Values.externalSecrets.refreshPolicy }}
+  refreshInterval: {{ .Values.externalSecrets.refreshInterval }}
+  secretStoreRef:
+    name: {{ .Values.externalSecrets.secretStoreRef.name }}
+    kind: {{ .Values.externalSecrets.secretStoreRef.kind }}
+  target:
+    name: {{ include "lldap.fullname" . }}-bootstrap-group
+    template:
+      engineVersion: v2
+      templateFrom:
+        - target: "Data"
+          configMap:
+            name: {{ include "lldap.fullname" . }}-bootstrap-group
+            items:
+            {{- range .Values.groups }}
+              - key: {{ .name }}.json
+            {{- end }}
+    creationPolicy: "Owner"
+    deletionPolicy: "Retain"
+  {{- with .Values.externalSecrets.bootstrapGroup.data }}
+  data:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .Values.externalSecrets.bootstrapGroup.dataFrom }}
+  dataFrom:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+{{- end }}
+{{- end }}
 {{- end }}
