extra-objects: allow yaml and string objects

--- a/charts/extra-object/templates/extra-objects.yaml
+++ b/charts/extra-object/templates/extra-objects.yaml
@@ -1,4 +1,8 @@
 {{ range .Values.templates }}
 ---
-{{ tpl . $ }}
-{{ end }}
+{{ if typeIs "string" . }}
+  {{- tpl . $ }}
+{{- else }}
+  {{- tpl (toYaml .) $ }}
+{{- end }}
+{{- end }}
